--- a/css/common.css
+++ b/css/common.css
@@ -4,13 +4,16 @@
 
 body {
   margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+}
+ul li {
+  list-style: none;
 }
 
 input {
@@ -21,4 +24,19 @@ input {
 button {
   padding: 8px 12px;
   cursor: pointer;
+}
+.gallery-container {
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.gallery-item {
+}
+.gallery-image {
+}
+
+.gallery {
+  display: flex;
+  align-items: center;
+  gap: 24px;
 }
